--- a/app/styles/components/_gem-footer.scss
+++ b/app/styles/components/_gem-footer.scss
@@ -1,4 +1,4 @@
-.footer {
+.gem-footer {
   ///////////////////////////////////////////////////////////////////////////////////
   $base-spacing: 1.5em !default;
   $base-accent-color: #477DCA !default;
