--- a/app/templates/rock-and-roll-ember.hbs
+++ b/app/templates/rock-and-roll-ember.hbs
@@ -9,13 +9,13 @@
 
 <section class="max-width auto-margin rock-and-roll-ember">
 
-  {{#box-content classNames="center margin-left-right-30px margin-bottom-60px"}}
-    <h2 class="margin-bottom-60px margin-top-60px">
+  {{#box-content classNames="center margin-left-right-30px margin-bottom-80px"}}
+    <h2 class="margin-bottom-80px margin-top-80px">
       Learn to implement authentication from Balint Erdi,<br>
       the author of <i>Rock and Roll with Ember</i>, and EmberSherpa.
     </h2>
 
-    <p class="margin-bottom-60px">
+    <p class="margin-bottom-80px">
       This complete introduction to authentication will tell you everything you need to know to implement 
       <strong>Username / Password</strong> and <strong>oAuth 2.0</strong> authentication scenarios. 
       This training will consist of pre-recorded videos, a live hands-on workshop and take home practice exercises.
@@ -25,7 +25,7 @@
   {{/box-content}}
 
   {{#box-content
-    classNames="margin-bottom-60px margin-left-right-30px"
+    classNames="margin-bottom-80px margin-left-right-30px"
     image="https://embermeetup.com/wp-content/uploads/RARE-Cap.png"
   }}
     <h2>Personalized Learning System</h2>
@@ -52,7 +52,7 @@
     classNames="margin-left-right-30px"
     image="https://embermeetup.com/wp-content/uploads/RARE-Player.png"
   }}
-  <h2>Pre-Recorded Videos <span class="float-right smaller-font margin-right-30px">August 11th</span></h2>
+  <h2>Authentication Fundamentals Videos <span class="float-right smaller-font margin-right-30px">August 11th</span></h2>
   <p>
     You will receive access to pre-recorded videos 7 days before the workshop. <br>
     These videos will cover the following topics:
@@ -67,7 +67,7 @@
   </ul>
   {{/box-content}}
 
-  {{#box-content classNames="margin-bottom-60px margin-left-right-30px"}}
+  {{#box-content classNames="margin-bottom-80px margin-left-right-30px"}}
     <p>
       As you view them, as fast or as slow as YOU want, you write down your questions as they pop into your head. 
       During the week prior to the workshop, as your subconscious mind continues to work, write down all of the 
@@ -88,10 +88,10 @@
   {{/box-callout}}
 
   {{#box-content
-    classNames="margin-left-right-30px margin-bottom-60px"
+    classNames="margin-left-right-30px margin-bottom-80px"
     image="https://embermeetup.com/wp-content/uploads/RARE-Monitor.png"
   }}
-    <h2 class="clearfix">Online Workshop <span class="float-right smaller-font margin-right-30px">August 18th<br>12pm - 4pm EST</span></h2>
+    <h2 class="clearfix">Interactive Workshop <span class="float-right smaller-font margin-right-30px">August 18th<br>12pm - 4pm EST</span></h2>
     <p>
       In the online workshop we will spend ALL of our time working on a project. 
       Learners will add authentication to an existing application. The goal of 
@@ -101,7 +101,7 @@
   {{/box-content}}
 
   {{#box-content
-    classNames="margin-bottom-60px rare-lightning-background"
+    classNames="margin-bottom-80px rare-lightning-background"
   }}
     <p>
       Our workshop is open to a <span class="red">LIMITED</span> number of seats in order to <br>
@@ -111,20 +111,19 @@
   {{/box-content}}
 
   {{#box-content
-    classNames="margin-left-right-30px margin-bottom-60px"
+    classNames="margin-left-right-30px margin-bottom-80px"
     image="https://embermeetup.com/wp-content/uploads/RARE-notebook.png"
   }}
-    <h2 class="clearfix">Take Home Exercises <span class="float-right smaller-font margin-right-30px">August 18 - 25th</span></h2>
+    <h2 class="clearfix">Implementation Support <span class="float-right smaller-font margin-right-30px">August 18 - 25th</span></h2>
     <p>
-      You will receive a set of exercises that will give you an opportunity to add authentication 
-      to Rock and Roll Ember application. We will provide access to a private Slack channel where 
-      you can discuss the challenges with other participants. You can’t always force learning to 
-      occur – time spent working and struggling on the problem can often give you a much better 
-      context for understanding the solution.
+      Putting what you learn to practice is the real test. Our implementation support will provide you 
+      with a Slack channel and a remote pair programming session. In the Slack channel you can ask questions
+      as you apply what you learned to your application. In the remote pair programming session, you can get a code review
+      or get help with a complex integration.
     </p>
   {{/box-content}}
 
-  <hr class="red-line margin-bottom-60px">
+  <hr class="red-line margin-bottom-80px">
 
   {{#box-content
     classNames="margin-left-right-30px margin-bottom-30px"
@@ -146,7 +145,7 @@
   {{/box-content}}
 
   {{#box-callout
-    classNames="img-padding-top-10px img-max-height-150px padding-30px"
+    classNames="img-padding-top-10px img-max-height-150px padding-30px margin-bottom-80px"
     image="https://embermeetup.com/wp-content/uploads/RARE-calendar.png" 
     position="right" 
     backgroundColor="sky"
@@ -154,27 +153,83 @@
     <h2>Schedule</h2>
     
     <dl class="date-list">
-      <dt><i class="fa fa-calendar-o" aria-hidden="true"></i> August 11th</dt><dd>Access to pre-recorded videos</dd><br>
+      <dt><i class="fa fa-calendar-o" aria-hidden="true"></i> August 11th</dt><dd>Access to Authentication Fundumentals Videos</dd><br>
       <dt><i class="fa fa-calendar-o" aria-hidden="true"></i> August 18th</dt><dd>12pm - 4pm EST - Online Workshop</dd><br>
-      <dt><i class="fa fa-calendar-o" aria-hidden="true"></i> August 18th - 25th</dt><dd>Take Home Exercises</dd><br>
+      <dt><i class="fa fa-calendar-o" aria-hidden="true"></i> August 18th - 25th</dt><dd>Implementation Support</dd><br>
     </dl>
   {{/box-callout}}
 
- {{#box-content
-    classNames="margin-left-right-30px margin-bottom-60px"
+  {{#box-content}}
+
+    <h2 class="center margin-bottom-80px">Reserve your stop now!</h2>
+
+    <div class="packages-table margin-bottom-80px">
+      <div class="packages-table--plan secondary">
+        <h3 class="header">Training<br> <span class="sub">Videos & Workshop</span></h3>
+        <ul class="content">
+          <li class="item videos-icon"><u>Authentication Fundamentals Videos</u></li>
+          <li class="item workshop-icon">Interactive Workshop</li>
+        </ul>
+        <div class="footer">
+          <button class="button call-to-action" {{action (toggle 'showTickets' this)}}>$249.99</button>
+        </div>
+      </div>
+
+      <div class="packages-table--plan primary">
+        <h3 class="header">Training & Support <span class="sub">Complete Package</span></h3>
+        <ul class="content">
+          <li class="item videos-icon"><u>Authentication Fundamentals Videos</u></li>
+          <li class="item workshop-icon"><u>Interactive Workshop</u></li>
+          <li class="item slack-icon"><u>Support Slack Channel (1 week)</u></li>
+          <li class="item screenhero-icon"><u>Pair Programming Session (45 min)</u></li>
+          <li class="item trees-icon">Evergreen Videos (1 year)</li>          
+        </ul>
+        <div class="footer">
+          <button class="button call-to-action" {{action (toggle 'showTickets' this)}}>Buy Together $349.99</button>
+        </div>
+      </div>      
+
+      <div class="packages-table--plan secondary">
+        <h3 class="header">Implementation Support <span class="sub">Chat & Pairing</span></h3>
+        <ul class="content">
+          <li class="item slack-icon"><u>Support Slack Channel (1 week)</u></li>
+          <li class="item screenhero-icon"><u>Pair Programming Session (45 min)</u></li>
+          <li class="item trees-icon">Evergreen Videos (1 year)</li>          
+        </ul>
+        <div class="footer">
+          <button class="button call-to-action" {{action (toggle 'showTickets' this)}}>$249.99</button>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="early-bird margin-bottom-80px">
+      <div class="main">
+        <button class="button call-to-action" {{action (toggle "showTickets" this)}}>Early Bird $299.99</button>
+      </div>
+      <div class="right">
+        - {{moment-from-now 'July 20, 2016' hideSuffix=true}} left
+      </div>
+    </div>
+
+  {{/box-content}}
+
+  <hr class="red-line margin-bottom-80px">
+
+  {{#box-content
+    classNames="margin-left-right-30px margin-bottom-80px"
     image="https://embermeetup.com/wp-content/uploads/RARE-trees.png"
   }}
     <h2>Evergreen Videos</h2>
     <p>
-      When you participate in this workshop, you will receive access to updated version of these videos for up to 1 year. 
+      We will update and revise our Authentication Fundamentals Videos as Ember's authentication story evolves.
+      Evergreen Videos will give you access to latest versions of the videos as they becomes available. 
       It’s a great way to keep up to date on the developments of Ember’s authentication story.
     </p>
   {{/box-content}}
 
-  <hr class="red-line margin-bottom-60px">
-
   {{#box-content
-    classNames="margin-bottom-60px rare-lightning-background content-max-width-600px"
+    classNames="margin-bottom-80px rare-lightning-background content-max-width-600px"
   }}
     <h2>Prerequisites</h2>
     <p>
@@ -184,3 +239,19 @@
   {{/box-content}}
 
 </section>
+
+{{#if showTickets}}
+  {{#modal-dialog 
+    close=(action (toggle 'showTickets' this)) 
+    targetAttachment="center"
+    translucentOverlay=true
+  }}
+  <div style="width:800px; text-align:left;">
+    <iframe  src="//eventbrite.com/tickets-external?eid=26391705301&ref=etckt" 
+             frameborder="0" height="400" width="100%" vspace="0" 
+             hspace="0" marginheight="5" marginwidth="5" scrolling="auto" 
+             allowtransparency="true">
+    </iframe>
+  </div>
+  {{/modal-dialog}}
+{{/if}}
