Made Rock and Roll Ember page responsive

--- a/app/templates/rock-and-roll-ember.hbs
+++ b/app/templates/rock-and-roll-ember.hbs
@@ -3,16 +3,15 @@
   classNames="rock-and-roll-ember"
   withHero=true
   heroImage="/assets/images/RARE-Logo.png"
-  heroSubTitle="Complete hands-on Introduction to authentication in Ember.js applications"
+  heroSubTitle="Complete hands-on introduction to authentication in Ember.js applications"
 }}
 {{scroll-to position=0}}
 
 <section class="max-width auto-margin rock-and-roll-ember">
 
   {{#box-content classNames="center margin-left-right-30px margin-bottom-80px"}}
-    <h2 class="margin-bottom-80px margin-top-80px">
-      Learn to implement authentication from Balint Erdi,<br>
-      the author of <i>Rock and Roll with Ember</i>, and EmberSherpa.
+    <h2 class="heading">
+      Learn to implement authentication with the author of <i>Rock and Roll with Ember</i> and EmberSherpa.
     </h2>
 
     <p class="margin-bottom-80px">
@@ -36,23 +35,18 @@
     </p>
   {{/box-content}}
 
-  {{#box-callout
-    classNames="img-padding-top-10px content-padding-top-15px"
-    image="https://embermeetup.com/wp-content/uploads/RARE-Gabby.svg" 
-    position="right" 
-    backgroundColor="red"
-  }}
-    <h2 class="padding-30px line-height-64px center">
-      Our system is completely student focussed,<br>
+  <div class="rocker-gabby-callout">
+    <h2>
+      Our system is completely student focussed,
       allowing the learner to take part in their own choose-your-own-adventure.
     </h2>
-  {{/box-callout}}
-
+  </div>
+  
   {{#box-content
     classNames="margin-left-right-30px"
     image="https://embermeetup.com/wp-content/uploads/RARE-Player.png"
   }}
-  <h2>Authentication Fundamentals Videos <span class="float-right smaller-font margin-right-30px">August 11th</span></h2>
+  <h2>Authentication Fundamentals Videos <span class="release-date">August 11th</span></h2>
   <p>
     You will receive access to pre-recorded videos 7 days before the workshop. <br>
     These videos will cover the following topics:
@@ -76,22 +70,17 @@
     </p>
   {{/box-content}}
 
-  {{#box-callout
-    classNames="img-padding-top-10px img-max-height-150px"
-    image="https://embermeetup.com/wp-content/uploads/RARE-key.png" 
-    position="right" 
-    backgroundColor="red"
-  }}
-    <h2 class="padding-30px line-height-64px center">
-      Our videos are tightly edited and offer a deep dive <br>into all of the fundamentals of authentication.
+  <div class="key-message">
+    <h2>
+      Our videos are tightly edited and offer a deep dive into all of the fundamentals of authentication.
     </h2>
-  {{/box-callout}}
+  </div>
 
   {{#box-content
     classNames="margin-left-right-30px margin-bottom-80px"
     image="https://embermeetup.com/wp-content/uploads/RARE-Monitor.png"
   }}
-    <h2 class="clearfix">Interactive Workshop <span class="float-right smaller-font margin-right-30px">August 18th<br>12pm - 4pm EST</span></h2>
+    <h2 class="clearfix">Interactive Workshop <span class="release-date">August 18th<br>12pm - 4pm EST</span></h2>
     <p>
       In the online workshop we will spend ALL of our time working on a project. 
       Learners will add authentication to an existing application. The goal of 
@@ -114,7 +103,7 @@
     classNames="margin-left-right-30px margin-bottom-80px"
     image="https://embermeetup.com/wp-content/uploads/RARE-notebook.png"
   }}
-    <h2 class="clearfix">Implementation Support <span class="float-right smaller-font margin-right-30px">August 18 - 25th</span></h2>
+    <h2 class="clearfix">Implementation Support <span class="release-date">August 18 - 25th</span></h2>
     <p>
       Putting what you learn to practice is the real test. Our implementation support will provide you 
       with a Slack channel and a remote pair programming session. In the Slack channel you can ask questions
@@ -144,20 +133,24 @@
     </div>
   {{/box-content}}
 
-  {{#box-callout
-    classNames="img-padding-top-10px img-max-height-150px padding-30px margin-bottom-80px"
-    image="https://embermeetup.com/wp-content/uploads/RARE-calendar.png" 
-    position="right" 
-    backgroundColor="sky"
-  }}
+  <div class="schedule">
     <h2>Schedule</h2>
     
     <dl class="date-list">
-      <dt><i class="fa fa-calendar-o" aria-hidden="true"></i> August 11th</dt><dd>Access to Authentication Fundumentals Videos</dd><br>
-      <dt><i class="fa fa-calendar-o" aria-hidden="true"></i> August 18th</dt><dd>12pm - 4pm EST - Online Workshop</dd><br>
-      <dt><i class="fa fa-calendar-o" aria-hidden="true"></i> August 18th - 25th</dt><dd>Implementation Support</dd><br>
+      <div class="row">
+        <dt><i class="fa fa-calendar-o" aria-hidden="true"></i> August 11th</dt>
+        <dd>Access to Authentication Fundumentals Videos</dd>
+      </div>
+      <div class="row">
+        <dt><i class="fa fa-calendar-o" aria-hidden="true"></i> August 18th</dt>
+        <dd>12pm - 4pm EST - Online Workshop</dd>
+      </div>
+      <div class="row">
+        <dt><i class="fa fa-calendar-o" aria-hidden="true"></i> August 18th - 25th</dt>
+        <dd>Implementation Support</dd>
+      </div>
     </dl>
-  {{/box-callout}}
+  </div>
 
   {{#box-content}}
 
@@ -165,7 +158,7 @@
 
     <div class="packages-table margin-bottom-80px">
       <div class="packages-table--plan secondary">
-        <h3 class="header">Training<br> <span class="sub">Videos & Workshop</span></h3>
+        <h3 class="header">Training<br> <span class="sub">Videos &amp; Workshop</span></h3>
         <ul class="content">
           <li class="item videos-icon"><u>Authentication Fundamentals Videos</u></li>
           <li class="item workshop-icon">Interactive Workshop</li>
@@ -176,7 +169,7 @@
       </div>
 
       <div class="packages-table--plan primary">
-        <h3 class="header">Training & Support <span class="sub">Complete Package</span></h3>
+        <h3 class="header">Training &amp; Support <span class="sub">Complete Package</span></h3>
         <ul class="content">
           <li class="item videos-icon"><u>Authentication Fundamentals Videos</u></li>
           <li class="item workshop-icon"><u>Interactive Workshop</u></li>
@@ -190,7 +183,7 @@
       </div>      
 
       <div class="packages-table--plan secondary">
-        <h3 class="header">Implementation Support <span class="sub">Chat & Pairing</span></h3>
+        <h3 class="header">Implementation Support <span class="sub">Chat &amp; Pairing</span></h3>
         <ul class="content">
           <li class="item slack-icon"><u>Support Slack Channel (1 week)</u></li>
           <li class="item screenhero-icon"><u>Pair Programming Session (45 min)</u></li>
@@ -242,16 +235,15 @@
 
 {{#if showTickets}}
   {{#modal-dialog 
+    container-class="pricing-modal"
     close=(action (toggle 'showTickets' this)) 
     targetAttachment="center"
     translucentOverlay=true
   }}
-  <div style="width:800px; text-align:left;">
     <iframe  src="//eventbrite.com/tickets-external?eid=26391705301&ref=etckt" 
              frameborder="0" height="400" width="100%" vspace="0" 
              hspace="0" marginheight="5" marginwidth="5" scrolling="auto" 
              allowtransparency="true">
     </iframe>
-  </div>
   {{/modal-dialog}}
 {{/if}}
