--- a/app/styles/pages/_rock-and-roll-ember.scss
+++ b/app/styles/pages/_rock-and-roll-ember.scss
@@ -7,38 +7,116 @@ header.rock-and-roll-ember {
   .hero-image {
     padding-top: 60px;
     img {
-      height: 543px;
+      @include media($mobile) {
+        max-width: 100%;
+      }
+      @include media($tablet) {
+        height: 543px;
+      }
     }
   }
 
   .hero-sub-title {
     display: inline-block;
-    margin-top: -60px;
     max-width: 600px;
     
     font-family: 'Dosis';
-    font-size: 36px;
     color: white;
     font-weight: 100;
+
+    @include media($mobile) { 
+      margin-top: -30px; 
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+    @include media($tablet) {
+      margin-top: -60px;      
+      font-size: 36px;
+    }
   }
 }
 
 section.rock-and-roll-ember {
 
-  .line-height-64px {
-    line-height: 64px;
+  @include media($mobile) {
+    font-size: 90%;
   }
 
-  .img-padding-top-10px {
-    .box-callout--img-right {
-      padding-top: 10px;    
+  @include media($tablet) {
+    font-size: 100%;
+  }
+
+  .heading {
+    margin: 80px auto;
+
+    @include media($desktop) {
+      max-width: 600px;
     }
   }
-  
-  .content-padding-top-15px {
-    .box-callout--content {
-      padding-top: 15px;
+
+  .rocker-gabby-callout {
+    background-color: $red;
+    display: flex;
+    align-content: center;
+    margin-bottom: 80px;
+
+    h2 {
+      max-width: 800px;
+      padding-left: 10px;
+      padding-right: 10px;
+      color: white;
+      text-align: center;
+      margin-left: auto;
+      margin-right: auto;
+      line-height: 64px;
     }
+
+    @include media($tablet) {
+      padding-right: 200px;
+      background: $red url(https://embermeetup.com/wp-content/uploads/RARE-Gabby.svg) calc(100% - 10px) bottom no-repeat;
+      background-size: 200px auto;
+      min-height: 260px;
+    }
+  }
+
+  .release-date {
+    font-size: 80%;
+    display: block;
+
+    @include media($desktop) {
+      float: right;
+      maring-right: 30px;
+    }
+  }
+
+  .key-message {
+    background-color: $red;
+    display: flex;
+    justify-content: center;    
+    align-content: center;
+    margin-bottom: 80px;
+
+    h2 {
+      max-width: 800px;
+      padding-left: 10px;
+      padding-right: 10px;
+      color: white;
+      text-align: center;
+      margin-left: auto;
+      margin-right: auto;
+      line-height: 64px;
+    }
+
+    @include media($tablet) {
+      background: $red url(https://embermeetup.com/wp-content/uploads/RARE-key.png) calc(100% - 20px) center no-repeat;
+      padding-right: 170px;
+      min-height: 210px;
+      background-size: 150px auto;
+    }
+  }
+
+  .max-width-800px {
+    max-width: 800px;
   }
   
   .float-right {
@@ -72,6 +150,23 @@ section.rock-and-roll-ember {
     }
   }
 
+  .schedule {
+    background-color: $skyBlue;
+    padding: 20px;
+    margin-bottom: 80px;
+
+    h2 {
+      margin-top: 0;
+    }
+
+    @include media($tablet) {
+      background: $skyBlue url(https://embermeetup.com/wp-content/uploads/RARE-calendar.png) calc(100% - 20px) center no-repeat;
+      padding-right: 170px;
+      min-height: 210px;
+      background-size: 150px auto;
+    }
+  }
+
   .two-columns {
     @include outer-container(100%);
 
@@ -83,6 +178,7 @@ section.rock-and-roll-ember {
       }
       img {
         max-height: 300px;
+        max-width: 100%;
       }
       @include media($mobile) {
         @include span-columns(12);
@@ -100,13 +196,21 @@ section.rock-and-roll-ember {
   }
 
   .date-list {
+    display: flex;
+    flex-direction: column;
     margin: 0;
-    dt, dd {
-      display: inline-block;
-      padding: 5px 0;
+
+    .row {
+      display: flex;
+      flex-direction: row;
+      dt {
+        width: 240px;
+      }
     }
-    dt {
-      width: 220px;
+
+    dt, dd {
+      padding: 5px 0;
+      margin-left: 0;
     }
   }
 
@@ -193,7 +297,7 @@ section.rock-and-roll-ember {
       }
 
       .call-to-action {
-        left: -10px;
+        left: calc(50% - 145px);
         width: 290px;
         position: absolute;
 
@@ -251,8 +355,8 @@ section.rock-and-roll-ember {
     align-items: center;
 
     .main {
-      margin-left: 30%;
-      width: 380px;
+      margin-left: 25%;
+      width: 50%;
     }
 
     .call-to-action {
@@ -288,5 +392,16 @@ section.rock-and-roll-ember {
 
   .trees-icon {
     background-image: url(https://embermeetup.com/wp-content/uploads/RARE-trees.png);
+  }
+}
+
+.pricing-modal {
+  text-align: center;
+  width: 100%;
+  height: 100%;
+
+  @include media($tablet) {
+    max-width: 800px;
+    max-height: 420px;
   }
 }
