--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -7,6 +7,8 @@ $base-spacing: 1.5em;
 @import "grid-settings";
 
 @import "ember-power-select";
+@import "ember-modal-dialog/ember-modal-structure";
+@import "ember-modal-dialog/ember-modal-appearance";
 
 @import '_colors';
 @import '_type';
@@ -20,6 +22,7 @@ $base-separator: 1px solid transparentize($dark-gray, 0.9);
 @import 'pages/_show';
 @import 'pages/_tools';
 @import 'pages/_newsletter';
+@import 'pages/_rock-and-roll-ember';
 
 @import 'components/_nav-header';
 @import 'components/_box-content';
@@ -41,6 +44,10 @@ a {
   text-decoration: none;
 }
 
+.clearfix {
+  @include clearfix;
+}
+
 .max-width {
   max-width: $maxWidth;
 }
@@ -54,7 +61,7 @@ a {
   margin: 0 30px;
 }
 
-.no-top-margin {
+.no-top-margin, .margin-top-none {
   margin-top: 0;
 }
 
@@ -64,4 +71,46 @@ a {
 
 .padding-30px {
   padding: 30px;
+}
+
+.padding-60px {
+  padding: 60px;
+}
+
+.center {
+  text-align: center;
+}
+
+.margin-left-right-30px {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.margin-bottom-30px {
+  margin-bottom: 30px;
+}
+
+.margin-bottom-60px {
+  margin-bottom: 60px;
+}
+
+.margin-bottom-80px {
+  margin-bottom: 80px;
+}
+
+.margin-top-60px {
+  margin-top: 60px;
+}
+
+.margin-top-80px {
+  margin-top: 80px;
+}
+
+.margin-right-30px {
+  margin-right: 30px;
+}
+
+hr.red-line {
+  border-top: 2px solid $red;
+  width: 90%;
 }
