--- a/app/templates/gemconf.hbs
+++ b/app/templates/gemconf.hbs
@@ -1,9 +1,9 @@
 {{head-data
   title=model.title
-  heroImage='/assets/images/Global-Meetup-Header-Triangle-Final.svg'
+  withHero=true
   heroTitle=model.heroTitle
   heroSubTitle=model.heroSubTitle
-  classNames="gemconf"
+  classNames="gemconf hero-style"
   buttonUrl="https://www.eventbrite.com/e/global-ember-meetup-conference-live-in-the-triangle-gemconf-tickets-22584175878"
   buttonText="RSVP"
 }}
