--- a/app/templates/rock-and-roll-ember.hbs
+++ b/app/templates/rock-and-roll-ember.hbs
@@ -17,7 +17,7 @@
     <p class="margin-bottom-80px">
       This complete introduction to authentication will tell you everything you need to know to implement 
       <strong>Username / Password</strong> and <strong>oAuth 2.0</strong> authentication scenarios. 
-      This training will consist of pre-recorded videos, a live hands-on workshop and take home practice exercises.
+      This training will consist of pre-recorded videos, a live hands-on workshop and post workshop implementation support.
     </p>
 
     <hr class="red-line">
@@ -61,10 +61,7 @@
 
   {{#box-content classNames="margin-bottom-80px margin-left-right-30px"}}
     <p>
-      As you view them, as fast or as slow as YOU want, you write down your questions as they pop into your head. 
-      During the week prior to the workshop, as your subconscious mind continues to work, write down all of the 
-      questions that occur during your time in the shower, or while washing the dishes. We will collect all of 
-      these questions before the workshop to allow our instructor to dive right into the details that are relevant to the group.
+      As you view them, as fast or as slow as YOU want, you write down your questions as they pop into your head while watching, or later as your subconscious mind continues to work. We will collect all of these questions before the workshop to allow our instructor to dive right into the details that are most relevant to the group.
     </p>
   {{/box-content}}
 
@@ -92,8 +89,7 @@
   }}
     <p>
       Our workshop is open to a <span class="red">LIMITED</span> number of seats in order to <br>
-      guarantee a 4:1 ratio of students to instructors & mentors. <br>
-      2-way voice interaction with instructor or just chat?
+      ensure learners can get their questions answered by our instructors & mentors. <br>
     </p>
   {{/box-content}}
 
