--- a/app/styles/components/_video-card.scss
+++ b/app/styles/components/_video-card.scss
@@ -1,8 +1,19 @@
 .video-card {
-  background: $skyBlue;
   height: 100%;
   width: 100%;
-  
+
+  &.without-featured {
+    background: $skyBlue;
+  }
+
+  &.with-featured {
+    img {
+      height: 100%;
+      width: 100%;
+    }
+  }
+
+
   display: flex;
   flex-direction: column;
   
