--- a/app/templates/components/video-card.hbs
+++ b/app/templates/components/video-card.hbs
@@ -1,49 +1,55 @@
-<div class="video-card--header">
-  <h3 class="video-card--title">
-    {{#link-to 'video' model classNames='red'}}
-      {{model.title}}
-    {{/link-to}}
-  </h3>
-</div>
-{{#if show-presenter}}
-<div class="video-card--body">
-  <div class="video-card--presenter">
-    <img src={{model.presenter.featured.thumbnail.url}} class="video-card--presenter-avatar" alt="{{model.presenter.title}} avatar">
-    <div class="video-card--info">
-      <h4 class="video-card--presenter-name">{{model.presenter.title}}</h4>
-      {{#if model.presenter.twitter}}
-        <a class="video-card--presenter-twitter" 
-           href={{twitter-url model.presenter.twitter}}
-           title="Link to {{model.presenter.firstName}}'s Twitter"
-           target="_blank">
-          @{{model.presenter.twitter}}
-        </a>
-      {{/if}}      
+{{#if use-featured}}
+  {{#link-to 'video' model}}
+    <img src="{{model.featured.url}}" alt="{{model.title}}"/>
+  {{/link-to}}
+{{else}}
+  <div class="video-card--header">
+    <h3 class="video-card--title">
+      {{#link-to 'video' model classNames='red'}}
+        {{model.title}}
+      {{/link-to}}
+    </h3>
+  </div>
+  {{#if show-presenter}}
+  <div class="video-card--body">
+    <div class="video-card--presenter">
+      <img src={{model.presenter.featured.thumbnail.url}} class="video-card--presenter-avatar" alt="{{model.presenter.title}} avatar">
+      <div class="video-card--info">
+        <h4 class="video-card--presenter-name">{{model.presenter.title}}</h4>
+        {{#if model.presenter.twitter}}
+          <a class="video-card--presenter-twitter" 
+            href={{twitter-url model.presenter.twitter}}
+            title="Link to {{model.presenter.firstName}}'s Twitter"
+            target="_blank">
+            @{{model.presenter.twitter}}
+          </a>
+        {{/if}}      
+      </div>
     </div>
   </div>
-</div>
-{{/if}}
-{{#if show-footer}}
-  {{#event-status (or model.episode model.conference)
-    as |event|
-  }}
-    {{#with (hash
-      hasVideo=(and event.isFinished model.hasVideo)
-      ) as |footer|
+  {{/if}}
+  {{#if show-footer}}
+    {{#event-status (or model.episode model.conference)
+      as |event|
     }}
-      <div class="video-card--footer {{if footer.hasVideo 'with-video' 'with-cta'}}">
-        {{#if footer.hasVideo}}
-          {{#link-to 'video' model class="button small red red-outline"}}Watch Video{{/link-to}}
-        {{else}}
-          <p>
-            Watch live on <strong>
-              {{moment-format event.event.eventDate 'LLLL' timeZone='America/New_York'}} 
-              {{moment-tz-guess 'z'}}
-            </strong><br>
-            <a href="http://bit.ly/the-ember-show" class="red">bit.ly/the-ember-show</a>
-          </p>
-        {{/if}}
-      </div>
-    {{/with}}
-  {{/event-status}}
+      {{#with (hash
+        hasVideo=(and event.isFinished model.hasVideo)
+        ) as |footer|
+      }}
+        <div class="video-card--footer {{if footer.hasVideo 'with-video' 'with-cta'}}">
+          {{#if footer.hasVideo}}
+            {{#link-to 'video' model class="button small red red-outline"}}Watch Video{{/link-to}}
+          {{else}}
+            <p>
+              Watch live on <strong>
+                {{moment-format event.event.eventDate 'LLLL' timeZone='America/New_York'}} 
+                {{moment-tz-guess 'z'}}
+              </strong><br>
+              <a href="http://bit.ly/the-ember-show" class="red">bit.ly/the-ember-show</a>
+            </p>
+          {{/if}}
+        </div>
+      {{/with}}
+    {{/event-status}}
+  {{/if}}
 {{/if}}
