--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -23,6 +23,7 @@ $base-separator: 1px solid transparentize($dark-gray, 0.9);
 @import 'pages/_tools';
 @import 'pages/_newsletter';
 @import 'pages/_rock-and-roll-ember';
+@import 'pages/_past-conferences';
 
 @import 'components/_nav-header';
 @import 'components/_box-content';
