Added sponsors section to past gemconf

--- a/app/templates/past-gemconf.hbs
+++ b/app/templates/past-gemconf.hbs
@@ -10,4 +10,12 @@
     {{/each}}
   </div>
 
+{{#box-callout class="gemconf-sponsors"}}
+  <h2>Sponsors</h2>
+  <p>Big 🙇 to our sponsors for helping us bring this event to you.</p>
+
+  {{gem-sponsor-links sponsors=model.sponsors}}
+
+{{/box-callout}}
+
 </section>
