copy changes, edited for conciseness

--- a/app/templates/rock-and-roll-ember.hbs
+++ b/app/templates/rock-and-roll-ember.hbs
@@ -13,25 +13,12 @@
       This training will consist of pre-recorded videos, a live hands-on workshop and post workshop implementation support.
     </p>
 
-    <hr class="red-line">
   {{/box-content}}
 
-  {{#box-content
-    classNames="margin-bottom-80px margin-left-right-30px"
-    image="https://embermeetup.com/wp-content/uploads/RARE-Cap.png"
-  }}
-    <h2>Personalized Learning System</h2>
-    <p>
-      The path to understanding is different for everyone. Nobody shares the exact same experiences and past time 
-      spent practicing on certain topics. Our system is completely student focussed, allowing the learner to take 
-      part in their own choose-your-own-adventure, but instead of dragons and space pirates, it’s syntax and frameworks.
-    </p>
-  {{/box-content}}
 
   <div class="rocker-gabby-callout">
     <h2>
-      Our system is completely student focussed,
-      allowing the learner to take part in their own choose-your-own-adventure.
+      Authentication is not simple. This course will have you and your Ember app rocking some serious login chops in no time.
     </h2>
   </div>
   
@@ -54,13 +41,13 @@
 
   {{#box-content classNames="margin-bottom-80px margin-left-right-30px"}}
     <p>
-      As you view them, as fast or as slow as YOU want, you write down your questions as they pop into your head while watching, or later as your subconscious mind continues to work. We will collect all of these questions before the workshop to allow our instructor to dive right into the details that are most relevant to the group.
+      As you view them, you'll' write down your questions as they occur, or later on as your subconscious mind continues to work. We'll collect all the questions beforehand to allow our instructor to dive right into the details that are most relevant to the group.
     </p>
   {{/box-content}}
 
   <div class="key-message">
     <h2>
-      Our videos are tightly edited and offer a deep dive into all of the fundamentals of authentication.
+      Our videos are tightly edited and offer a deep dive into all aspects of authentication.
     </h2>
   </div>
 
@@ -70,10 +57,10 @@
   }}
     <h2 class="clearfix">Interactive Workshop <span class="release-date">August 18th<br>12pm - 4pm EST</span></h2>
     <p>
-      In the online workshop we will spend ALL of our time working on a project. 
-      Learners will add authentication to an existing application. The goal of 
-      this workshop is for you to gain first hand experience implementing authentication. 
-      You will have an opportunity to see real code and have your questions answered.
+      In the online workshop we'll spend ALL of our time working on a project,  
+      adding authentication to an existing application. The goal of 
+      is for you to gain first hand experience implementing authentication. 
+      You will see real code and work on real problems.
     </p>
   {{/box-content}}
 
@@ -92,9 +79,9 @@
   }}
     <h2 class="clearfix">Implementation Support <span class="release-date">August 18 - 25th</span></h2>
     <p>
-      Putting what you learn to practice is the real test. Our implementation support will provide you 
-      with a Slack channel and a remote pair programming session. In the Slack channel you can ask questions
-      as you apply what you learned to your application. In the remote pair programming session, you can get a code review
+      Putting what you learn to practice is the real test. After the workshop, you'll continue to have access 
+      to our Slack channel and a remote pair programming session. Ask questions, or clarify details 
+      as you apply what you learned to your application. During your pairing session, you can get a code review
       or get help with a complex integration.
     </p>
   {{/box-content}}
